<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.cobble-project</groupId>
    <artifactId>cobble-flink</artifactId>
    <version>0.2.0-1-flink-1.17-SNAPSHOT</version>
    <name>cobble-flink</name>
    <description>A lib that integrate Cobble with Apache Flink, providing state backends, source and sink, for storing
        and querying data use Cobble in Flink applications.</description>
    <url>https://github.com/cobble-project/cobble-flink</url>
    <packaging>pom</packaging>

    <modules>
        <module>cobble-state</module>
        <module>cobble-sink</module>
        <module>cobble-source</module>
        <module>cobble-dist</module>
        <module>cobble-state-bench</module>
    </modules>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <flink.version>1.17.2</flink.version>
        <cobble.java.version>0.2.0-SNAPSHOT</cobble.java.version>
        <junit.version>5.10.2</junit.version>
        <surefire.test.jvm.args></surefire.test.jvm.args>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <executable>java</executable>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>${surefire.test.jvm.args}</argLine>
                    <useSystemClassLoader>true</useSystemClassLoader>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.22.8</version>
                <configuration>
                    <java>
                        <googleJavaFormat>
                            <version>1.7</version>
                            <style>AOSP</style>
                        </googleJavaFormat>
                        <importOrder>
                            <order>io.cobble,,javax,java,scala,#</order>
                        </importOrder>
                        <removeUnusedImports />
                        <includes>
                            <include>src/main/java/**/*.java</include>
                            <include>src/test/java/**/*.java</include>
                        </includes>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java11-plus</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <properties>
                <surefire.test.jvm.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                    --add-exports=java.base/sun.net.util=ALL-UNNAMED
                    --add-opens=java.base/java.lang=ALL-UNNAMED
                    --add-opens=java.base/java.util=ALL-UNNAMED</surefire.test.jvm.args>
            </properties>
        </profile>
    </profiles>

</project>
